--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -2,10 +2,13 @@
 layout: default
 ---
 
+{% assign author = site.data.authors.mattt %}
+
 <article role="article">
   <header role="heading">
     <h1 class="title"><a href="{{ page.url }}">{{ page.title | camel_break }}</a></h1>
-    <h2><time datetime="{{ page.date }}" pubdate="{{ page.date }}">{{ page.date | ordinalize }}</time></h2>
+    <h2>
+      Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> on <time datetime="{{ page.date }}" pubdate="{{ page.date }}">{{ page.date | ordinalize }}</time></h2>
   </header>
 
   <div class="content" data-swiftype-index="true">
@@ -54,15 +57,20 @@ layout: default
           </article>
       </div>
 
+
+      {% assign related = site.related_articles %}
+      {% if page.category %}
+        {% assign category = page.category | downcase %}
+        {% assign related = site.categories[category] %}
+      {% endif %}
+
+      {% if related.length != 1 %}
+
       <div id="related">
         <small>Related Articles</small>
 
         <ul>
-          {% assign related = site.related_articles %}
-          {% if page.category %}
-            {% assign category = page.category | downcase %}
-            {% assign related = site.categories[category] %}
-          {% endif %}
+
 
           {% assign related = related | shuffle %}
           {% for post in related limit: 4 %}
@@ -74,6 +82,10 @@ layout: default
           {% endfor %}
         </ul>
       </div>
+
+      {% endif %}
     </nav>
+
+    <p>{{ site.description }}</p>
   </footer>
 </article>
