--- a/assets/sass/_animations.sass
+++ b/assets/sass/_animations.sass
@@ -1,11 +1,11 @@
 @-webkit-keyframes twirl
   0%
-    -webkit-transform: skewX(0)
+    -webkit-transform: scale(1)
   10%, 20%
-    -webkit-transform: skewX(-3deg)
-  30%, 50%, 70%
-    -webkit-transform: skewX(3deg)
-  40%, 60%
-    -webkit-transform: skewX(-3deg)
-  80%, 100%
-    -webkit-transform: skewX(0)
+    -webkit-transform: scale(0.9) rotate(-3deg)
+  30%, 50%, 70%, 90%
+    -webkit-transform: scale(1.1) rotate(3deg)
+  40%, 60%, 80%
+    -webkit-transform: scale(1.1) rotate(-3deg)
+  100%
+    -webkit-transform: scale(1) rotate(0)
