--- a/assets/sass/_swiftype.sass
+++ b/assets/sass/_swiftype.sass
@@ -1,3 +1,6 @@
+#st-main-container .st-search-bar .st-powered-by
+  display: none !important
+
 div.st-lb_overlay
   background-color: rgba(0, 0, 0, 0.3)
 
