--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -5,7 +5,7 @@
 
 {% assign contributor = site.data.authors.mattt %}
 
-<div class="contributor" rel="{{ include.role }}" itemscope itemtype="http://data-vocabulary.org/Person">
+<div class="contributor" itemprop="contributor" itemscope itemtype="http://data-vocabulary.org/Person">
   {% case include.role %}
   {% when 'author' %}
     <small>Written by</small>
@@ -16,11 +16,15 @@
   <img class="avatar" itemprop="photo" src="//0.gravatar.com/avatar/f32c3cab150e7018cbe4d00401f597e2?size=300" draggable="false"/>
   <div class="details">
     <span itemprop="name">{{ contributor.name }}</span>
+    <span itemprop="role" style="display:none;">{{ include.role }}</span>
 
     {{ contributor.bio | markdownify }}
 
     {% if contributor.google %}
-      <a href="https://plus.google.com/{{ contributor.google }}?rel=author" style="display: none;"></a>
+      <a href="https://plus.google.com/{{ contributor.google }}?rel=author" rel="author"></a>
     {% endif %}
+
+    <a href="https://plus.google.com/{{ site.google }}" rel="publisher"></a>
+
   </div>
 </div>
