--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-{% assign author = site.data.authors.mattt %}
+{% assign author = site.data.authors["Mattt Thompson"] %}
 
 <article role="article" id="{{ page.id | remove: '/' }}" itemscope itemtype="http://schema.org/Article">
   <header role="heading">
-    <h1 class="title" itemprop="name"><a href="{{ page.url }}">{{ page.title | camel_break }}</a></h1>
-    <h2>
-      Written by <a class="author" href="{{ author.url }}" itemprop="author">{{ author.name }}</a> on <time datetime="{{ page.date }}" pubdate="{{ page.date }}">{{ page.date | ordinalize }}</time></h2>
+    <h1 class="title" itemprop="name">
+      <a href="{{ page.url }}">{{ page.title | camel_break }}</a>
+    </h1>
+    <h2>Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> on <time datetime="{{ page.date }}" pubdate="{{ page.date }}" itemprop="datePublished">{{ page.date | ordinalize }}</time></h2>
   </header>
 
   <div class="content" itemprop="articleBody" data-swiftype-index="true">
