--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -351,35 +351,35 @@ section
       font-variant: small-caps
       margin-bottom: 1em
 
-    [role="navigation"]
-      +row
+[role="complementary"]
+  +row
 
-      #continue
-        +span-columns(9 of 12)
+  #continue
+    +span-columns(9 of 12)
 
-        h1
-          margin-bottom: 0.5em
+    h1
+      margin-bottom: 0.5em
 
-        p
-          font-size: 0.75em
+    p
+      font-size: 0.75em
 
-      #related
-        +span-columns(3 of 12)
-        +omega
+  #related
+    +span-columns(3 of 12)
+    +omega
 
-        +media($mobile)
-          margin-top: 1em
+    +media($mobile)
+      margin-top: 1em
 
-        li
-          font-size: 0.75em
+    li
+      font-size: 0.75em
 
-          +media($mobile)
-            font-size: 1em
+      +media($mobile)
+        font-size: 1em
 
 
-      #continue, #related
-        +media($mobile)
-          +fill-parent
+  #continue, #related
+    +media($mobile)
+      +fill-parent
 
 [role="contentinfo"]
   text-align: center
