--- a/nshipster.cn/_layouts/default.html
+++ b/nshipster.cn/_layouts/default.html
@@ -1,15 +1,11 @@
 <!doctype html>
-<html lang="zh-Hans" xmlns:wb=“http://open.weibo.com/wb”>
+<html lang="{{ site.lang }}" xmlns:wb="http://open.weibo.com/wb">
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   {% if page.id %}
     <title>{{ page.title | replace:'<br/>',' ' | strip_html }} - {{ site.title }}</title>
-    {% if page.description %}
-      <meta name="description" content="{{ page.description | strip_html }}"/>
-    {% else %}
-      <meta name="description" content="{{ page | only_first_p | strip_html }}"/>
-    {% endif %}
+    <meta name="description" content="{{ page.excerpt | strip_html }}"/>
     <link rel="canonical" href="{{ site.url }}{{ page.url }}"/>
   {% else %}
     <title>{{ page.title | strip_html }}</title>
@@ -17,10 +13,9 @@
     <link rel="canonical" href="{{ site.url }}"/>
   {% endif %}
   <meta name="author" content="Mattt Thompson"/>
-  <meta name="revisit-after" content="3 days"/>
+  <meta name="revisit-after" content="7 days"/>
   <meta name="viewport" content="width=device-width"/>
-  <meta name="google-site-verification" content="0Yws_zn0X2NwVsvD--A_UNDw0_SyDbkVwFMFGwkLfSE"/>
-  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"/>
+  <link rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/cn/"/>
   <link rel="alternate" hreflang="en-us" href="http://nshipster.com"/>
   <link rel="alternate" hreflang="zh-Hans" href="http://nshipster.cn"/>
   <link rel="alternate" hreflang="x-default" href="http://nshipster.com"/>
@@ -31,21 +26,6 @@
   <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
   <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
   <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
-
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@NSHipster">
-  <meta name="twitter:creator" content="@mattt">
-  {% if page.id %}
-    <meta name="twitter:title" content="{{ page.title }}">
-    {% if page.description %}
-      <meta name="twitter:description" content="{{ page.description | strip_html | escape }}">
-    {% else %}
-      <meta name="twitter:description" content="{{ page.content | truncate: 250 | strip_html | escape }}">
-    {% endif %}
-  {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
-    <meta name="twitter:description" content="{{ site.description | strip_html | escape}}">
-  {% endif %}
 
   <meta content="{{ site.title }}" property="og:site_name"/>
   {% if page.id %}
@@ -70,34 +50,51 @@
   <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
-<body>
+<body itemscope itemtype="http://schema.org/WebPage">
   <div role="container">
     <header role="banner">
       <h1 id="logo">
-        <a href="{{ site.url }}">
-          <acronym title="NeXTSTEP/Sun">NS</acronym>
-          <strong>Hipster</strong>
-          <em>中文版</em>
-          <img id="moustache" src="/images/moustache.svg" width="200" height="150" data-author="http://thenounproject.com/bnhw"/>
+        <a href="/">
+          {% include ns.svg %}
+          {% include mustache.svg %}
         </a>
       </h1>
 
+      {% if false %}
+      <nav>
+        <ul>
+          {% assign sections = "articles|books|training" | split: '|' %}
+          {% for link in sections %}
+            {% assign href = link | prepend: '/' %}
+            <li>
+              {% assign url = page.url | remove: '/index.html' %}
+              {% if url == href %}
+                <a href="{{ href }}" class="current">{{ link | capitalize }}</a>
+              {% else %}
+                <a href="{{ href }}">{{ link | capitalize }}</a>
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+      {% endif %}
+
       {% unless page.id %}
-        <h2>
-          {{ site.description }}
-        </h2>
+        <h2 class="tagline">{{ site.description }}</h2>
       {% endunless %}
     </header>
 
-    <div id="main" role="main">
+    <div role="main" itemprop="mainContentOfPage">
       {{ content }}
     </div>
 
     <footer role="contentinfo">
       <section class="credits colophon">
         <p>
-          <span aria-hidden="true" class="icon-creative-commons"></span>
-
+          <i aria-hidden="true" class="icon-cc"></i>
+          除非另有声明、本网站采用知识共享「<a href="http://creativecommons.org/licenses/by-nc/3.0/cn/" rel="license">署名-非商业性使用 3.0 中国大陆</a>」许可协议授权。
+        </p>
+        <p>
           <span class="author">本站文章由 <a href="http://mattt.me">Mattt Thompson</a> 撰写、</span>
 
           {% assign translators = site.posts | sort: 'translator' | map: 'translator' | uniq %}
@@ -112,47 +109,21 @@
           {% endfor %}
           翻译。
           </span>
-          <span class="license"基于<a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="license">创作共用 BY-NC 协议</a>发布。</span>
-
-          <a href="https://plus.google.com/106751358503565042647?rel=author" style="display: none;"/>
         </p>
       </section>
 
       <aside class="links">
-        <a href="https://github.com/NSHipster/articles/issues" class="icon-github" title="Pull Requests Welcome" aria-hidden="true"></a>
-        <a href="{{ site.url }}/feed.xml" class="icon-feed" title="RSS" aria-hidden="true"></a>
+        <a href="/feed.xml" class="icon-feed" title="RSS" aria-hidden="true"></a>
       </aside>
-
-      {% if page.id %}
-        <section class="archive" role="navigation">
-          {% for group in site.groups %}
-            <div>
-              <h2>{{ group }}</h2>
-              <ul>
-                {% for post in site.posts | sort_by_title %}
-                  {% if post.framework == group %}
-                    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-                  {% elsif group == 'Miscellanea' %}
-                    {% unless site.groups contains post.framework %}
-                      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-                    {% endunless %}
-                  {% endif %}
-                {% endfor %}
-              </ul>
-            </div>
-          {% endfor %}
-        </section>
-      {% endif %}
     </footer>
   </div>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  <script>    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-49868484-2', 'nshipster.cn');
+    ga('create', 'UA-49868484-2', 'auto');
     ga('send', 'pageview');
   </script>
 </body>
