--- a/nshipster.cn/_layouts/post.html
+++ b/nshipster.cn/_layouts/post.html
@@ -2,22 +2,75 @@
 layout: default
 ---
 
-<article>
-  <header>
-    <h1><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title | camel_break }}</a></h1>
-    <h2><a href="http://mattt.me/">Mattt Thompson</a> 撰写，
+{% assign author = site.data.authors["Mattt Thompson"] %}
+
+<article role="article" id="{{ page.id | remove: '/' }}" itemscope itemtype="http://schema.org/Article">
+  <header role="heading">
+    <h1 class="title" itemprop="name">
+      <a href="{{ page.url }}">{{ page.title | camel_break }}</a>
+    </h1>
+    <h2>Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> 撰写，
       {% if page.translator %}
         {{ page.translator }}翻译，
       {% endif %}
 
-      发布于<time pubdate="{{ page.date }}">{{ page.date | date:"%Y年%-m月%-d日" }}</time></h2>
+      发布于<time datetime="{{ page.date }}" pubdate="{{ page.date }}" itemprop="datePublished">{{ page.date | date:"%Y年%-m月%-d日" }}</time></h2>
   </header>
 
-  <div class="content">
+  <div class="content" itemprop="articleBody" data-swiftype-index="true">
     {{ content }}
   </div>
 
-  <aside>
-    <wb:share-button count="y" type="button" ralateUid="5066373892" psize="big" title="{{ page.title }} —— 来自NSHipster：介绍Cocoa &amp; Objective-C中的晦涩主题" url="{{ page.url }}"></wb:share-button>
-  </aside>
+  <footer role="complementary">
+    <section id="sharing">
+      <wb:share-button count="y" type="button" ralateUid="5066373892" psize="big" title="{{ page.title }} —— 来自NSHipster：介绍Cocoa &amp; Objective-C中的晦涩主题" url="{{ page.url }}"></wb:share-button>
+    </section>
+
+    <section id="attribution">
+      {% include contributor.html role="author" %}
+      {% if page.translator %}
+        {% include contributor.html role="translator" %}
+      {% endif %}
+    </section>
+
+    <section>
+      <div id="continue">
+        <small>下一篇文章</small>
+        {% assign next = page.next %}
+        {% if next == nil %}
+        {% assign next = site.posts.last %}
+        {% endif %}
+
+          <article>
+            <h1 class="title">
+              <a href="{{ next.url }}" title="{{ next.title }}" rel="next">{{ next.title  | camel_break }}</a>
+            </h1>
+
+            {{ next.excerpt | markdownify }}
+          </article>
+      </div>
+
+
+      {% assign related = site.related_articles %}
+      {% if page.category %}
+        {% assign category = page.category | downcase %}
+        {% assign related = site.categories[category] %}
+      {% endif %}
+
+      <div id="related">
+        <small>相关文章</small>
+
+        <ul>
+          {% assign related = related | shuffle %}
+          {% for post in related limit: 4 %}
+          {% if page.url != post.url %}
+            <li>
+              <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+            </li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </section>
+  </footer>
 </article>
