--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -107,6 +107,7 @@
         </p>
         <p><acronym title="International Standard Serial Number">ISSN</acronym> 2373-9800</p>
         <p lang="zh-Hans"><a href="http://nshipster.cn" hreflang="zh-Hans" title="Articles also available in Chinese">文章也可在中文</a>。</p>
+        <a href="https://plus.google.com/{{ site.google }}" rel="publisher"></a>
       </section>
 
       <aside class="links">
