--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -26,6 +26,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
   <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
   <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
+  <link rel="author" type="text/plain" href="http://nshipster.com/humans.txt"/>
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@NSHipster">
