--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -21,22 +21,22 @@
   <link rel="alternate" hreflang="x-default" href="http://nshipster.com"/>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/feed.xml"/>
   <link rel="stylesheet" type="text/css" href="/css/screen.css"/>
-  <link rel="apple-touch-icon" href="touch-icon-iphone.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
-  <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
+  <link rel="apple-touch-icon" href="touch-icon-iphone.png"/>
+  <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png"/>
+  <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png"/>
+  <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon"/>
   <link rel="author" type="text/plain" href="http://nshipster.com/humans.txt"/>
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@NSHipster">
-  <meta name="twitter:creator" content="@mattt">
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@NSHipster"/>
+  <meta name="twitter:creator" content="@mattt"/>
   {% if page.id %}
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ page.excerpt | strip_html | escape }}">
+    <meta name="twitter:title" content="{{ page.title }}"/>
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html | escape }}"/>
   {% else %}
-    <meta name="twitter:title" content="{{ site.title }}">
-    <meta name="twitter:description" content="{{ site.description | strip_html | escape}}">
+    <meta name="twitter:title" content="{{ site.title }}"/>
+    <meta name="twitter:description" content="{{ site.description | strip_html | escape}}"/>
   {% endif %}
 
   <meta content="{{ site.title }}" property="og:site_name"/>
